--- a/style.css
+++ b/style.css
@@ -8,18 +8,40 @@
 }
 
 body {
-  margin: 0px;
+  font-family: "Roboto", sans-serif;
 }
 
 header {
   font-family: "Shrikhand", cursive;
   text-align: center;
-  -webkit-box-shadow: 0 0 5px grey;
-          box-shadow: 0 0 5px grey;
+  -webkit-box-shadow: 0 3px 5px #d3d3d3;
+          box-shadow: 0 3px 5px #d3d3d3;
   padding: 5px;
+  position: relative;
 }
 
 header h1 {
   margin-bottom: 0;
+}
+
+main .city h2 {
+  font-size: 16px;
+  font-weight: 500;
+}
+
+main .city {
+  background-color: #eaeaea;
+  text-align: center;
+  padding: 8px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 16px;
 }
 /*# sourceMappingURL=style.css.map */
