--- a/style.scss
+++ b/style.scss
@@ -6,15 +6,29 @@
   box-sizing: border-box;
 }
 body {
-  margin: 0px;
+  font-family: "Roboto", sans-serif;
 }
 
 header {
   font-family: "Shrikhand", cursive;
   text-align: center;
-  box-shadow: 0 0 5px grey;
+  box-shadow: 0 3px 5px #d3d3d3;
   padding: 5px;
+  position: relative;
   h1 {
     margin-bottom: 0;
   }
+}
+main .city h2 {
+  font-size: 16px;
+  font-weight: 500;
+}
+main .city {
+  background-color: #eaeaea;
+  text-align: center;
+  padding: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
 }
