--- a/style.scss
+++ b/style.scss
@@ -32,3 +32,31 @@ main .city {
   align-items: center;
   gap: 16px;
 }
+.reservez {
+  text-align: center;
+  background-color: #f2f2f2;
+  height: 250px;
+}
+.reservez h2 {
+  margin-top: 40px;
+  font-size: 29px;
+}
+.reservez p {
+  font-size: 16px;
+}
+.reservez button {
+  background-image: linear-gradient(to top, #9356dc, #ff79da);
+  color: white;
+  font-weight: 400;
+  font-size: 16px;
+  border: none;
+  border-radius: 32px;
+  box-shadow: 1px 2px 16px -5px #000000;
+  padding: 16px 20px;
+  transition: transform 200ms;
+  margin-top: 16px;
+}
+.reservez button:hover {
+  transform: scale(1.02);
+  opacity: 0.9;
+}
