--- a/style.scss
+++ b/style.scss
@@ -1,62 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&family=Shrikhand&display=swap");
-*,
-::before,
-::after {
-  box-sizing: border-box;
-}
-body {
-  font-family: "Roboto", sans-serif;
-}
-
-header {
-  font-family: "Shrikhand", cursive;
-  text-align: center;
-  box-shadow: 0 3px 5px #d3d3d3;
-  padding: 5px;
-  position: relative;
-  h1 {
-    margin-bottom: 0;
-  }
-}
-main .city h2 {
-  font-size: 16px;
-  font-weight: 500;
-}
-main .city {
-  background-color: #eaeaea;
-  text-align: center;
-  padding: 8px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 16px;
-}
-.reservez {
-  text-align: center;
-  background-color: #f2f2f2;
-  height: 250px;
-}
-.reservez h2 {
-  margin-top: 40px;
-  font-size: 29px;
-}
-.reservez p {
-  font-size: 16px;
-}
-.reservez button {
-  background-image: linear-gradient(to top, #9356dc, #ff79da);
-  color: white;
-  font-weight: 400;
-  font-size: 16px;
-  border: none;
-  border-radius: 32px;
-  box-shadow: 1px 2px 16px -5px #000000;
-  padding: 16px 20px;
-  transition: transform 200ms;
-  margin-top: 16px;
-}
-.reservez button:hover {
-  transform: scale(1.02);
-  opacity: 0.9;
-}
+@import "./sass/base/base";
+@import "./sass/layouts/header";
+@import "./sass/layouts/city";
+@import "./sass/layouts/reservez";
