--- a/style.css
+++ b/style.css
@@ -24,12 +24,7 @@ header h1 {
   margin-bottom: 0;
 }
 
-main .city h2 {
-  font-size: 16px;
-  font-weight: 500;
-}
-
-main .city {
+.city {
   background-color: #eaeaea;
   text-align: center;
   padding: 8px;
@@ -45,14 +40,18 @@ main .city {
   gap: 16px;
 }
 
+.city h2 {
+  font-size: 16px;
+  font-weight: 500;
+}
+
 .reservez {
   text-align: center;
   background-color: #f2f2f2;
-  height: 250px;
+  padding: 21px;
 }
 
 .reservez h2 {
-  margin-top: 40px;
   font-size: 29px;
 }
 
@@ -76,6 +75,7 @@ main .city {
   transition: transform 200ms;
   transition: transform 200ms, -webkit-transform 200ms;
   margin-top: 16px;
+  margin-bottom: 25px;
 }
 
 .reservez button:hover {
