--- a/style.scss
+++ b/style.scss
@@ -2,3 +2,4 @@
 @import "./sass/layouts/header";
 @import "./sass/layouts/city";
 @import "./sass/layouts/reservez";
+@import "./sass/layouts/etapes";
