--- a/sass/base/base.scss
+++ b/sass/base/base.scss
@@ -9,5 +9,16 @@ body {
   font-family: "Roboto", sans-serif;
 }
 .etapes {
-  padding: 0 16px;
+  padding: 2rem 1rem;
+}
+.menus {
+  padding: 2rem 1rem;
+}
+a {
+  text-decoration: none;
+  color: inherit;
+}
+h3,
+p {
+  margin: 0;
 }
