--- a/style.scss
+++ b/style.scss
@@ -3,3 +3,4 @@
 @import "./sass/layouts/city";
 @import "./sass/layouts/reservez";
 @import "./sass/layouts/etapes";
+@import "./sass/layouts/cartes.scss";
