--- a/sass/layouts/reservez.scss
+++ b/sass/layouts/reservez.scss
@@ -3,11 +3,13 @@
   text-align: center;
   background-color: #f2f2f2;
   padding: 21px;
+  margin-bottom: 2rem;
   h2 {
-    font-size: 29px;
+    font-size: 23px;
   }
   p {
     font-size: 16px;
+    font-weight: 100;
   }
   button {
     background-image: linear-gradient(to top, $color-primary, $color-secondary);
