--- a/sass/layouts/cartes.scss
+++ b/sass/layouts/cartes.scss
@@ -1,5 +1,6 @@
 .menus {
   background-color: #f6f6f6;
+  padding-bottom: 4rem;
   h2 {
     margin-bottom: 2rem;
   }
@@ -30,11 +31,30 @@
     &__image {
       background-size: cover;
       height: 14rem;
-      border-radius: 1rem;
+      border-radius: 1rem 1rem 0 0;
     }
     @for $i from 1 through 4 {
       &__image-#{$i} {
         background-image: url("/images/restaurants/image-#{$i}.jpg");
+      }
+    }
+    &__description {
+      position: relative;
+      background-color: white;
+      border-radius: 0 0 1rem 1rem;
+      @include shadow;
+      h3 {
+        padding: 1.2rem 0.5rem 0 0.5rem;
+      }
+      p {
+        padding: 0.5rem 0.5rem 1rem 0.5rem;
+      }
+      i {
+        font-size: 2rem;
+        position: absolute;
+        right: 1rem;
+        top: 50%;
+        transform: translateY(-50%);
       }
     }
   }
