--- a/sass/layouts/etapes.scss
+++ b/sass/layouts/etapes.scss
@@ -2,6 +2,7 @@
 
 .etapes {
   counter-reset: etapes;
+  padding-bottom: 3rem;
   & h2 {
     margin-bottom: 2rem;
   }
@@ -9,7 +10,7 @@
     display: flex;
     flex-direction: column;
     gap: 1.5 * $size-etapes;
-    padding-left: 25px;
+    padding-left: 16px;
   }
   & li {
     position: relative;
