--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ header h1 {
 
 .etapes {
   counter-reset: etapes;
+  padding-bottom: 3rem;
 }
 .etapes h2 {
   margin-bottom: 2rem;
@@ -94,7 +95,7 @@ header h1 {
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
-  padding-left: 25px;
+  padding-left: 16px;
 }
 .etapes li {
   position: relative;
@@ -135,6 +136,7 @@ header h1 {
 
 .menus {
   background-color: #f6f6f6;
+  padding-bottom: 4rem;
 }
 .menus h2 {
   margin-bottom: 2rem;
@@ -163,7 +165,7 @@ header h1 {
 .menus .carte__image {
   background-size: cover;
   height: 14rem;
-  border-radius: 1rem;
+  border-radius: 1rem 1rem 0 0;
 }
 .menus .carte__image-1 {
   background-image: url("/images/restaurants/image-1.jpg");
@@ -176,6 +178,57 @@ header h1 {
 }
 .menus .carte__image-4 {
   background-image: url("/images/restaurants/image-4.jpg");
+}
+.menus .carte__description {
+  position: relative;
+  background-color: white;
+  border-radius: 0 0 1rem 1rem;
+  box-shadow: 0 3px 5px #d3d3d3;
+}
+.menus .carte__description h3 {
+  padding: 1.2rem 0.5rem 0 0.5rem;
+}
+.menus .carte__description p {
+  padding: 0.5rem 0.5rem 1rem 0.5rem;
+}
+.menus .carte__description i {
+  font-size: 2rem;
+  position: absolute;
+  right: 1rem;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+footer {
+  background-color: #353535;
+  padding: 0 1rem;
+  display: grid;
+  grid-template-columns: 1fr;
+}
+footer h2 {
+  font-family: "Shrikhand", sans-serif;
+  color: white;
+  font-weight: 500;
+  margin-top: 1.8rem;
+  font-size: 1.2rem;
+}
+footer p {
+  margin-bottom: 2rem;
+}
+footer a {
+  padding: 0.2rem;
+  color: white;
+}
+footer a i {
+  padding-right: 0.8rem;
+}
+footer .fa,
+footer .fas {
+  width: 16px;
+  padding-right: 1.7rem;
+}
+footer .fa-hands-helping:before {
+  font-size: 0.7rem;
 }
 
 /*# sourceMappingURL=style.css.map */
