--- a/style.scss
+++ b/style.scss
@@ -4,3 +4,4 @@
 @import "./sass/layouts/reservez";
 @import "./sass/layouts/etapes";
 @import "./sass/layouts/cartes.scss";
+@import "./sass/layouts/footer.scss";
