--- a/sass/layouts/reservez.scss
+++ b/sass/layouts/reservez.scss
@@ -12,7 +12,7 @@
     font-weight: 100;
   }
   button {
-    background-image: linear-gradient(to top, $color-primary, $color-secondary);
+    @include gradient;
     color: white;
     font-weight: 400;
     font-size: 16px;
