--- a/sass/utils/mixin.scss
+++ b/sass/utils/mixin.scss
@@ -5,3 +5,6 @@
 @mixin zoom {
   transform: scale(1.02);
 }
+@mixin gradient {
+  background-image: linear-gradient(to top, $color-primary, $color-secondary);
+}
