--- a/style.scss
+++ b/style.scss
@@ -5,3 +5,4 @@
 @import "./sass/layouts/etapes";
 @import "./sass/layouts/cartes.scss";
 @import "./sass/layouts/footer.scss";
+@import "./sass/layouts/restaurants.scss";
