--- a/style.css
+++ b/style.css
@@ -205,7 +205,6 @@ header h1 {
   padding: 0.5rem 0.5rem 1rem 0.5rem;
 }
 .menus .carte__description i {
-  font-size: 2em;
   position: absolute;
   font-size: 35px;
   right: 1rem;
@@ -260,6 +259,38 @@ footer .fa-hands-helping:before {
 
 img {
   max-width: 100%;
+}
+
+main {
+  position: relative;
+  background-color: white;
+  border-radius: 1rem 1rem 0 0;
+  box-shadow: 0 3px 5px #d3d3d3;
+}
+main h2 {
+  font-family: "Shrikhand", sans-serif;
+  margin-left: 1rem;
+  font-size: 1.8rem;
+}
+main i {
+  position: absolute;
+  font-size: 30px;
+  right: 2rem;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+main .fas {
+  color: transparent;
+  background-image: linear-gradient(to top, #9356dc, #ff79da);
+  background-clip: text;
+  -webkit-background-clip: text;
+  opacity: 0;
+  transition: all 200ms ease-in-out;
+}
+main:hover .fas {
+  opacity: 1;
+  transform: translateY(-50%) scale(1.1);
 }
 
 /*# sourceMappingURL=style.css.map */
