--- a/sass/layouts/restaurants.scss
+++ b/sass/layouts/restaurants.scss
@@ -1,3 +1,34 @@
 img {
   max-width: 100%;
 }
+main {
+  position: relative;
+  background-color: white;
+  border-radius: 1rem 1rem 0 0;
+  @include shadow;
+  h2 {
+    font-family: "Shrikhand", sans-serif;
+    margin-left: 1rem;
+    font-size: 1.8rem;
+  }
+  i {
+    position: absolute;
+    font-size: 30px;
+    right: 2rem;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+  }
+  .fas {
+    color: transparent;
+    @include gradient;
+    background-clip: text;
+    -webkit-background-clip: text;
+    opacity: 0;
+    transition: all 200ms ease-in-out;
+  }
+  &:hover .fas {
+    opacity: 1;
+    transform: translateY(-50%) scale(1.1);
+  }
+}
