--- a/style/style.css
+++ b/style/style.css
@@ -170,25 +170,25 @@ header h1 {
   border-radius: 1rem 1rem 0 0;
 }
 .menus .carte__image-1 {
-  background-image: url("/images/restaurants/image-1.jpg");
+  background-image: url("../../images/restaurants/image-1.jpg");
 }
 .menus .carte__image-2 {
   background-position: center;
 }
 .menus .carte__image-2 {
-  background-image: url("/images/restaurants/image-2.jpg");
+  background-image: url("../../images/restaurants/image-2.jpg");
 }
 .menus .carte__image-2 {
   background-position: center;
 }
 .menus .carte__image-3 {
-  background-image: url("/images/restaurants/image-3.jpg");
+  background-image: url("../../images/restaurants/image-3.jpg");
 }
 .menus .carte__image-2 {
   background-position: center;
 }
 .menus .carte__image-4 {
-  background-image: url("/images/restaurants/image-4.jpg");
+  background-image: url("../../images/restaurants/image-4.jpg");
 }
 .menus .carte__image-2 {
   background-position: center;
