--- a/sass/layouts/cartes.scss
+++ b/sass/layouts/cartes.scss
@@ -29,18 +29,10 @@
   }
   .carte {
     &__Image {
-      background-size: cover;
-      background-position: right bottom;
+      object-fit: cover;
+      width: 100%;
       height: 16rem;
       border-radius: 1rem 1rem 0 0;
-    }
-    @for $i from 1 through 4 {
-      &__Image#{$i} {
-        background-image: url("../../images/restaurants/Image#{$i}.jpg");
-      }
-      &__Image2 {
-        background-position: center;
-      }
     }
     &__description {
       position: relative;
