--- a/sass/layouts/cartes.scss
+++ b/sass/layouts/cartes.scss
@@ -31,15 +31,15 @@
     &__Image {
       object-fit: cover;
       width: 100%;
-      height: 16rem;
+      height: 14rem;
       border-radius: 1rem 1rem 0 0;
-      margin-bottom: -4px;
     }
     &__description {
       position: relative;
       background-color: white;
       border-radius: 0 0 1rem 1rem;
       @include shadow;
+      margin-top: -2.2rem;
       h3 {
         padding: 1.2rem 0.5rem 0 0.5rem;
         max-width: 50%;
