--- a/style/style.css
+++ b/style/style.css
@@ -51,7 +51,6 @@ header h1 {
 .city h2 {
   font-size: 16px;
   font-weight: 500;
-  font-family: "Roboto", sans-serif;
 }
 
 .reservez {
@@ -166,15 +165,15 @@ header h1 {
 .menus .carte__Image {
   object-fit: cover;
   width: 100%;
-  height: 16rem;
+  height: 14rem;
   border-radius: 1rem 1rem 0 0;
-  margin-bottom: -4px;
 }
 .menus .carte__description {
   position: relative;
   background-color: white;
   border-radius: 0 0 1rem 1rem;
   box-shadow: 0 3px 5px #d3d3d3;
+  margin-top: -2.2rem;
 }
 .menus .carte__description h3 {
   padding: 1.2rem 0.5rem 0 0.5rem;
@@ -219,6 +218,7 @@ footer h2 {
 }
 footer p {
   margin-bottom: 2rem;
+  padding-top: 0.2rem;
 }
 footer a {
   padding: 0.2rem;
@@ -247,7 +247,6 @@ main {
   box-shadow: 0 3px 5px #d3d3d3;
 }
 main h2 {
-  font-family: "Shrikhand", sans-serif;
   margin-left: 1rem;
   font-size: 1.8rem;
 }
