--- a/sass/layouts/menu-page.scss
+++ b/sass/layouts/menu-page.scss
@@ -1,3 +1,5 @@
+@import "../utils/animation.scss";
+
 .banniere img {
   width: 100%;
   max-height: 70vh;
@@ -34,19 +36,67 @@
   }
   .fas.fa-heart:hover {
     opacity: 1;
-    transform: translateY(-50%) scale(1.1);
+    transform: translateY(-50%);
   }
+}
+.main-categorie {
+  padding: 0 1rem;
+  background-color: #f6f6f6;
 }
 .commandez {
   background: #f6f6f6;
   display: grid;
   grid-template-columns: 1fr;
   gap: 0.7rem;
-  .commandez__categorie {
-    border: 1px solid blue;
-    background-color: white;
-  }
 }
-.main-categorie {
-  padding: 0 0.3rem;
+.commandez__categorie {
+  background-color: white;
+  border-radius: 1rem;
+  .commandez-choix {
+    display: flex;
+    overflow: hidden;
+    background-color: white;
+    border-radius: 1rem;
+    @include shadow;
+
+    .commandez-choix__prix {
+      margin-left: auto;
+      display: flex;
+      padding: 1rem;
+
+      align-items: flex-end;
+      font-weight: 900;
+    }
+    .commandez-choix__description {
+      padding: 1rem;
+    }
+    .commandez-choix__check {
+      background-color: $color-tertiary;
+      margin-right: -4rem;
+      width: 4rem;
+      border-radius: 0 1rem 1rem 0;
+      transition: margin-right 0.5s;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      i {
+        background: white;
+        border-radius: 1rem;
+        width: 1.5rem;
+        height: 1.5rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: $color-tertiary;
+      }
+    }
+    &:hover {
+      .commandez-choix__check {
+        margin-right: 0;
+      }
+      i {
+        animation: rotate 5s ease-in-out;
+      }
+    }
+  }
 }
