--- a/sass/layouts/menu-page.scss
+++ b/sass/layouts/menu-page.scss
@@ -40,35 +40,59 @@
   }
 }
 .main-categorie {
-  padding: 0 1rem;
+  padding: 0 0.5rem;
   background-color: #f6f6f6;
 }
 .commandez {
-  background: #f6f6f6;
   display: grid;
   grid-template-columns: 1fr;
   gap: 0.7rem;
+  h3 {
+    margin-left: 0.9rem;
+    margin-bottom: 0;
+    font-weight: 300;
+    font-size: 1.1rem;
+    position: relative;
+    &:after {
+      content: "";
+      width: 1.2rem;
+      height: 0.2rem;
+      background-color: $color-tertiary;
+      position: absolute;
+      top: 1.5rem;
+      left: 0;
+      width: 2.5rem;
+    }
+  }
 }
 .commandez__categorie {
-  background-color: white;
   border-radius: 1rem;
+  overflow: hidden;
+
   .commandez-choix {
     display: flex;
     overflow: hidden;
     background-color: white;
     border-radius: 1rem;
+    margin: 0.5rem;
     @include shadow;
 
     .commandez-choix__prix {
       margin-left: auto;
       display: flex;
       padding: 1rem;
-
       align-items: flex-end;
       font-weight: 900;
     }
     .commandez-choix__description {
       padding: 1rem;
+      overflow: hidden;
+      h4,
+      p {
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+      }
     }
     .commandez-choix__check {
       background-color: $color-tertiary;
@@ -79,6 +103,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      flex-shrink: 0;
       i {
         background: white;
         border-radius: 1rem;
@@ -95,7 +120,7 @@
         margin-right: 0;
       }
       i {
-        animation: rotate 5s ease-in-out;
+        animation: rotate 0.5s ease-in-out;
       }
     }
   }
