--- a/sass/layouts/reservez.scss
+++ b/sass/layouts/reservez.scss
@@ -12,20 +12,6 @@
     font-weight: 100;
   }
   button {
-    @include gradient;
-    color: white;
-    font-weight: 400;
-    font-size: 16px;
-    border: none;
-    border-radius: 32px;
-    box-shadow: 1px 2px 16px -5px #000000;
-    padding: 16px 20px;
-    transition: transform 200ms;
-    margin-top: 16px;
-    margin-bottom: 25px;
-  }
-  button:hover {
-    @include zoom;
-    opacity: 0.9;
+    @include button;
   }
 }
