--- a/sass/utils/mixin.scss
+++ b/sass/utils/mixin.scss
@@ -8,3 +8,21 @@
 @mixin gradient {
   background-image: linear-gradient(180deg, $color-primary, $color-secondary);
 }
+@mixin button {
+  color: white;
+  font-weight: 400;
+  cursor: pointer;
+  font-size: 16px;
+  border: none;
+  border-radius: 32px;
+  box-shadow: 1px 2px 16px -5px #000000;
+  padding: 16px 20px;
+  transition: transform 200ms;
+  margin-top: 16px;
+  margin-bottom: 25px;
+  @include gradient;
+  &:hover {
+    @include zoom;
+    opacity: 0.9;
+  }
+}
