--- a/style/style.css
+++ b/style/style.css
@@ -178,8 +178,10 @@ header h1 {
   margin-top: -2.2rem;
 }
 .menus .carte__description h3 {
-  padding: 1.2rem 0.5rem 0 0.5rem;
+  padding: 0rem 0.5rem 0 0.5rem;
   max-width: 50%;
+  margin-bottom: 0;
+  font-size: 1.1rem;
 }
 .menus .carte__description p {
   padding: 0.5rem 0.5rem 1rem 0.5rem;
@@ -198,7 +200,7 @@ header h1 {
   background-clip: text;
   -webkit-background-clip: text;
   opacity: 0;
-  transition: all 700ms ease-out;
+  transition: all 700ms ease-in-out;
 }
 .menus .carte__description .fas.fa-heart:hover {
   opacity: 1;
